--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+body {
+  background-color: #00bf8f;
+  margin-left: 10px;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.losange,
+.losange div {
+  margin: 0 auto;
+  transform-origin: 50% 50%;
+  overflow: hidden;
+  width: 250px;
+  height: 250px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.losange {
+  transform: rotate(45deg) translateY(10px);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.losange .los1 {
+  width: 355px;
+  height: 355px;
+  transform: rotate(-45deg) translateY(-74px);
 }
-
-.App-link {
-  color: #61dafb;
+.losange .los1 img {
+  width: 100%;
+  height: auto;
+  margin-right: 500px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  text-align: left;
+}
+h4 {
+  text-align: left;
+}
+.bio {
+  margin-top: 80px;
+}
+button {
+  border-radius: 50%;
 }
